# legal-clause-finder

./: .gitignore  README.md  contracts.db  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/pipelines/: LLMQueryPipeline.py
backend/utils/: azure_utils.py  document_processor.py
backend/utils/dev/: chunking_strategy_trial.ipynb
utils/: db_init.py
